# multi-model-ai-compare

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  app.py  budget_tracker.py  clipboard_utils.py  default_models.py  diagnostic.py  docker-compose.dev.yml  docker-compose.yml  instructions.md  monitoring.py  nginx.conf  prometheus.yml  pyproject.toml  test_suite.py
